[gd_scene load_steps=6 format=3 uid="uid://c7n23dbqxyj8u"]

[ext_resource type="Script" path="res://levels/Level00.gd" id="1_q5y33"]
[ext_resource type="Script" path="res://levels/MobSpawner.gd" id="2_agcgo"]
[ext_resource type="PackedScene" uid="uid://4vpsemw53hye" path="res://widgets/Widget.tscn" id="3_xkpuq"]

[sub_resource type="Curve2D" id="Curve2D_asmhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0ct0"]
size = Vector2(53, 793)

[node name="Level00" type="Node2D"]
script = ExtResource("1_q5y33")

[node name="MobSpawnTimer" type="Timer" parent="."]

[node name="MobSpawner" type="Node2D" parent="."]
script = ExtResource("2_agcgo")

[node name="MobPath" type="Path2D" parent="MobSpawner"]
scale = Vector2(1, 1.01227)
curve = SubResource("Curve2D_asmhc")

[node name="MobSpawnPoint" type="PathFollow2D" parent="MobSpawner/MobPath"]
position = Vector2(0, 782.4)
rotation = -1.5708

[node name="Exit" type="Area2D" parent="."]
position = Vector2(1486, 400)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(-55, 2.5)
shape = SubResource("RectangleShape2D_g0ct0")

[node name="Marker2D" type="Marker2D" parent="Exit"]
modulate = Color(1, 1, 1, 0.356863)
position = Vector2(-191, 0)

[node name="Widget" parent="." instance=ExtResource("3_xkpuq")]

[connection signal="body_entered" from="Exit" to="." method="_on_detector_right_body_entered"]
